--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
     "next": "latest",
+    "next-compose-plugins": "^2.2.1",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
